--- a/source/posts/2018/04-02-podcast-06-13.html.md
+++ b/source/posts/2018/04-02-podcast-06-13.html.md
@@ -1,5 +1,5 @@
 ---
-title: "13 выпуск 06 сезона.  и прочее"
+title: "13 выпуск 06 сезона. Rails 5.0.7 and 5.1.6, React v16.3.0, Elapsed time with Ruby, Redux - Not Dead Yet, TensorFlow.js, ReLaXed и прочее"
 date: 2018-04-02
 tags:
  - podcasts
@@ -16,24 +16,12 @@ main_image: "/images/static/06/0613.png"
 
 ## Ruby
 
- - [Rails 5.0.7 and 5.1.6 have been released](http://weblog.rubyonrails.org/2018/3/29/Rails-5-0-7-and-5-1-6-have-been-released/)
- - [Elapsed time with Ruby, the right way](https://blog.dnsimple.com/2018/03/elapsed-time-with-ruby-the-right-way/)
- - [Capistrano deploy to ubuntu with systemd, nginx/puma and rbenv](https://prograils.com/posts/capistrano-deploy-to-ubuntu-with-systemd-nginx-puma-and-rbenv)
- - [4 cool less known Rails features – part 1: ActiveJob, ActiveModel, command line](http://pdabrowski.com/blog/ruby-on-rails/4-cool-less-known-rails-features-part-1/)
- - [WhereChain - don't write Post.where('comments > ?', 5), write Post.where.gt(comments: 5) instead](https://github.com/marcinruszkiewicz/where_chain)
- - [Pp_sql - Rails ActiveRecord SQL queries log beautifier](https://github.com/kvokka/pp_sql/)
+ - [Rails 5.0.7 and 5.1.6 have been released](http://weblog.rubyonrails.org/2018/3/29/Rails-5-0-7-and-5-1-6-have-been-released/), [4 cool less known Rails features – part 1: ActiveJob, ActiveModel, command line](http://pdabrowski.com/blog/ruby-on-rails/4-cool-less-known-rails-features-part-1/) и [Capistrano deploy to ubuntu with systemd, nginx/puma and rbenv](https://prograils.com/posts/capistrano-deploy-to-ubuntu-with-systemd-nginx-puma-and-rbenv)
+ - [Elapsed time with Ruby, the right way](https://blog.dnsimple.com/2018/03/elapsed-time-with-ruby-the-right-way/), [WhereChain - don't write Post.where('comments > ?', 5), write Post.where.gt(comments: 5) instead](https://github.com/marcinruszkiewicz/where_chain) и [Pp_sql - Rails ActiveRecord SQL queries log beautifier](https://github.com/kvokka/pp_sql/)
 
 ## JavaScript
 
- - [Modern Frontend Developer in 2018](https://medium.com/tech-tajawal/modern-frontend-developer-in-2018-4c2072fa2b9c)
- - [Announcing the Second Edition of "Refactoring"](https://martinfowler.com/articles/201803-refactoring-2nd-ed.html)
- - [React v16.3.0: New lifecycles and context API](https://reactjs.org/blog/2018/03/29/react-v-16-3.html)
- - [Blogged Answers: Redux - Not Dead Yet!](http://blog.isquaredsoftware.com/2018/03/redux-not-dead-yet/)
- - [Google JavaScript Style Guide](https://google.github.io/styleguide/jsguide.html)
- - [Google publishes a JavaScript style guide. Here are some key lessons](https://medium.freecodecamp.org/google-publishes-a-javascript-style-guide-here-are-some-key-lessons-1810b8ad050b)
- - [From Express.js to AWS Lambda: Migrating existing Node.js applications to serverless](https://hackernoon.com/from-express-js-to-aws-lambda-migrating-existing-node-js-applications-to-serverless-7473041ecc56)
- - [Speeding up webpack](https://medium.com/onfido-tech/speed-up-webpack-ff53c494b89c)
- - [TensorFlow.js - an open-source hardware-accelerated JavaScript library for training and deploying machine learning models](https://js.tensorflow.org/)
- - [ReLaXed - a software to create PDF documents interactively using HTML or Pug (a shorthand for HTML)](https://github.com/RelaxedJS/ReLaXed)
+ - [React v16.3.0: New lifecycles and context API](https://reactjs.org/blog/2018/03/29/react-v-16-3.html), [Google publishes a JavaScript style guide. Here are some key lessons](https://medium.freecodecamp.org/google-publishes-a-javascript-style-guide-here-are-some-key-lessons-1810b8ad050b), [Blogged Answers: Redux - Not Dead Yet!](http://blog.isquaredsoftware.com/2018/03/redux-not-dead-yet/) и [Modern Frontend Developer in 2018](https://medium.com/tech-tajawal/modern-frontend-developer-in-2018-4c2072fa2b9c)
+ - [From Express.js to AWS Lambda: Migrating existing Node.js applications to serverless](https://hackernoon.com/from-express-js-to-aws-lambda-migrating-existing-node-js-applications-to-serverless-7473041ecc56), [Speeding up webpack](https://medium.com/onfido-tech/speed-up-webpack-ff53c494b89c), [TensorFlow.js - an open-source hardware-accelerated JavaScript library for training and deploying machine learning models](https://js.tensorflow.org/) и [ReLaXed - a software to create PDF documents interactively using HTML or Pug (a shorthand for HTML)](https://github.com/RelaxedJS/ReLaXed)
 
 READMORE
