--- a/source/posts/2018/04-09-podcast-06-14.html.md
+++ b/source/posts/2018/04-09-podcast-06-14.html.md
@@ -26,7 +26,10 @@ main_image: "/images/static/06/0614.png"
 
 ## JavaScript
 
+ - [D3 5.0](https://github.com/d3/d3/blob/master/CHANGES.md#changes-in-d3-50)
  - [Sails 1.0 has arrived](https://sailsjs.com/documentation/upgrading/to-v-1-0)
+ - [Here are examples of everything new in ECMAScript 2016, 2017, and 2018](https://medium.freecodecamp.org/here-are-examples-of-everything-new-in-ecmascript-2016-2017-and-2018-d52fa3b5a70e)
+ - [Гибридные нейронные сети с GPU ускорением в JavaScript](http://jem-space.ru/gibridnyie-nieironnyie-sieti-s-ghrafichieskim-uskorieniiem-v-javascript/)
  - [Cancelling Requests with Abortable Fetch](https://www.loxodrome.io/post/cancelling-requests/)
  - [How to Add Touch ID to Your React Native App](https://blog.theodo.fr/2018/04/add-touch-id-react-native-app/)
 
