--- a/source/posts/2018/04-09-podcast-06-14.html.md
+++ b/source/posts/2018/04-09-podcast-06-14.html.md
@@ -1,13 +1,13 @@
 ---
-title: "14 выпуск 06 сезона.  и прочее"
+title: "14 выпуск 06 сезона. D3 5.0, Sails 1.0, Ruby Sass to be put to pasture, ECMAScript 2016, 2017, and 2018, HTTPX и прочее"
 date: 2018-04-09
 tags:
  - podcasts
 audio_url: "http://mp3.rwpod.com/podcasts/06/0614.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/06.14/0614.mp3"
 audio_format: "audio/mpeg"
-audio_length: 42731642
-duration: "00:44:29"
+audio_length: 26772440
+duration: "00:27:51"
 small_icon: mic
 main_image: "/images/static/06/0614.png"
 ---
@@ -16,21 +16,12 @@ main_image: "/images/static/06/0614.png"
 
 ## Ruby
 
- - [Ruby creator 'Matz' discusses his standards for coding and the future of programming](https://blog.sideci.com/special-interview-with-matz-13823d824e94)
- - [Ruby Sass to be put to pasture on March 26, 2019](https://css-tricks.com/ruby-sass-to-be-put-to-pasture-on-march-26-2019/)
- - [How to add a Content Security Policy (CSP) to Rails?](https://bauland42.com/ruby-on-rails-content-security-policy-csp/)
- - [Understanding a Ruby WAT](http://pauloancheta.com/ruby/wat/2018/03/23/explaining-wats/)
- - [Handling Errors Gracefully](http://blog.katpadi.ph/handling-error-gracefully/)
- - [HTTPX - Ruby HTTP client which supports HTTP/2, HTTP/1 and concurrent requests](http://honeyryderchuck.gitlab.io/httpx/)
- - [Persistent-dmnd - ruby gem for diamond-beautiful immutable data structures](https://github.com/ivoanjo/persistent-dmnd)
+ - [Ruby creator 'Matz' discusses his standards for coding and the future of programming](https://blog.sideci.com/special-interview-with-matz-13823d824e94), [Ruby Sass to be put to pasture on March 26, 2019](https://css-tricks.com/ruby-sass-to-be-put-to-pasture-on-march-26-2019/) и [How to add a Content Security Policy (CSP) to Rails?](https://bauland42.com/ruby-on-rails-content-security-policy-csp/)
+ - [Understanding a Ruby WAT](http://pauloancheta.com/ruby/wat/2018/03/23/explaining-wats/), [Handling Errors Gracefully](http://blog.katpadi.ph/handling-error-gracefully/), [HTTPX - Ruby HTTP client which supports HTTP/2, HTTP/1 and concurrent requests](http://honeyryderchuck.gitlab.io/httpx/) и [Persistent-dmnd - ruby gem for diamond-beautiful immutable data structures](https://github.com/ivoanjo/persistent-dmnd)
 
 ## JavaScript
 
- - [D3 5.0](https://github.com/d3/d3/blob/master/CHANGES.md#changes-in-d3-50)
- - [Sails 1.0 has arrived](https://sailsjs.com/documentation/upgrading/to-v-1-0)
- - [Here are examples of everything new in ECMAScript 2016, 2017, and 2018](https://medium.freecodecamp.org/here-are-examples-of-everything-new-in-ecmascript-2016-2017-and-2018-d52fa3b5a70e)
- - [Гибридные нейронные сети с GPU ускорением в JavaScript](http://jem-space.ru/gibridnyie-nieironnyie-sieti-s-ghrafichieskim-uskorieniiem-v-javascript/)
- - [Cancelling Requests with Abortable Fetch](https://www.loxodrome.io/post/cancelling-requests/)
- - [How to Add Touch ID to Your React Native App](https://blog.theodo.fr/2018/04/add-touch-id-react-native-app/)
+ - [D3 5.0](https://github.com/d3/d3/blob/master/CHANGES.md#changes-in-d3-50), [Sails 1.0 has arrived](https://sailsjs.com/documentation/upgrading/to-v-1-0) и [Here are examples of everything new in ECMAScript 2016, 2017, and 2018](https://medium.freecodecamp.org/here-are-examples-of-everything-new-in-ecmascript-2016-2017-and-2018-d52fa3b5a70e)
+ - [Гибридные нейронные сети с GPU ускорением в JavaScript](http://jem-space.ru/gibridnyie-nieironnyie-sieti-s-ghrafichieskim-uskorieniiem-v-javascript/), [Cancelling Requests with Abortable Fetch](https://www.loxodrome.io/post/cancelling-requests/) и [How to Add Touch ID to Your React Native App](https://blog.theodo.fr/2018/04/add-touch-id-react-native-app/)
 
 READMORE
