--- a/source/posts/2018/04-23-podcast-06-16.html.md
+++ b/source/posts/2018/04-23-podcast-06-16.html.md
@@ -16,13 +16,14 @@ main_image: "/images/static/06/0616.png"
 
 ## Ruby
 
- - [Ruby 2.5 enables Thread.report_on_exception by default and we get more info when threads die](https://blog.bigbinary.com/2018/04/18/ruby-2-5-enables-thread-report_on_exception-by-default.html)
- - [Handling CORS issues in your Rails API](https://medium.com/@Nicholson85/handling-cors-issues-in-your-rails-api-120dfbcb8a24)
- - [HOWTO execute Python code with Ruby](https://readysteadycode.com/howto-execute-python-code-with-ruby)
+ - [Ruby 2.5 enables Thread.report_on_exception by default and we get more info when threads die](https://blog.bigbinary.com/2018/04/18/ruby-2-5-enables-thread-report_on_exception-by-default.html), [Ruby’s New Infinite Range Syntax: (0..)](https://medium.com/square-corner-blog/rubys-new-infinite-range-syntax-0-97777cf06270) и [Rails 5.2 added Date#prev_occurring and Date#next_occurring to return specified next & previous occurring day of week](https://blog.bigbinary.com/2018/04/17/rails-5-2-adds-date-methods-to-return-specified-next-or-previous-occurring-day-of-week.html)
+ - [Linear Regression in Ruby](https://medium.com/@oem_83498/linear-regression-in-ruby-a170f9a892e5), [Working Effectively with Data Factories Using FactoryBot](https://semaphoreci.com/community/tutorials/working-effectively-with-data-factories-using-factorybot) и [Handling CORS issues in your Rails API](https://medium.com/@Nicholson85/handling-cors-issues-in-your-rails-api-120dfbcb8a24)
+ - [HOWTO execute Python code with Ruby](https://readysteadycode.com/howto-execute-python-code-with-ruby), [Action Policy - an authorization framework for Ruby and Rails applications](http://actionpolicy.evilmartians.io/#/) и [Xf - Transform Functions](https://github.com/baweaver/xf)
 
 ## JavaScript
 
  - [Hello wasm-pack!](https://hacks.mozilla.org/2018/04/hello-wasm-pack/)
+ - [Choosing a Responsive Email Framework: MJML vs. Foundation for Emails](https://css-tricks.com/choosing-a-responsive-email-framework%E2%80%8Amjml-vs-foundation-for-emails/)
 
 ## Conferences
 
