--- a/source/posts/2018/04-23-podcast-06-16.html.md
+++ b/source/posts/2018/04-23-podcast-06-16.html.md
@@ -1,5 +1,5 @@
 ---
-title: "16 выпуск 06 сезона.  и прочее"
+title: "16 выпуск 06 сезона. Ruby 2.5 enables Thread.report_on_exception, wasm-pack, Action Policy, Package Phobia, Pico.js и прочее"
 date: 2018-04-23
 tags:
  - podcasts
@@ -22,8 +22,9 @@ main_image: "/images/static/06/0616.png"
 
 ## JavaScript
 
- - [Hello wasm-pack!](https://hacks.mozilla.org/2018/04/hello-wasm-pack/)
- - [Choosing a Responsive Email Framework: MJML vs. Foundation for Emails](https://css-tricks.com/choosing-a-responsive-email-framework%E2%80%8Amjml-vs-foundation-for-emails/)
+ - [Hello wasm-pack!](https://hacks.mozilla.org/2018/04/hello-wasm-pack/), [Designing very large (JavaScript) applications](https://medium.com/@cramforce/designing-very-large-javascript-applications-6e013a3291a3) и [What You Can Expect From Node.js 10](https://nodesource.com/blog/what-you-can-expect-from-node-js-10)
+ - [&lt;link rel=”prefetch/preload”&gt; in webpack](https://medium.com/webpack/link-rel-prefetch-preload-in-webpack-51a52358f84c), [Choosing a Responsive Email Framework: MJML vs. Foundation for Emails](https://css-tricks.com/choosing-a-responsive-email-framework%E2%80%8Amjml-vs-foundation-for-emails/) и [A Look at CSS Viewport Units](https://alligator.io/css/viewport-units/)
+ - [Package Phobia - find the cost of adding a new dev dependency to your project](https://packagephobia.now.sh/), [Pico.js: face detection in JavaScript](https://tkv.io/posts/picojs-intro/demo/), [React Lazy Images - components and utilities for lazy image loading in React](https://github.com/fpapado/react-lazy-images) и [Slugify - slugify a string](https://github.com/sindresorhus/slugify)
 
 ## Conferences
 
