--- a/source/posts/2018/05-01-podcast-06-17.html.md
+++ b/source/posts/2018/05-01-podcast-06-17.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "https://mp3.rwpod.com/podcasts/06/0617.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/06.17/0617.mp3"
 audio_format: "audio/mpeg"
-audio_length: 39672922
-duration: "00:41:18"
+audio_length: 38237878
+duration: "00:39:48"
 small_icon: mic
 main_image: "/images/static/06/0617.png"
 ---
@@ -17,7 +17,7 @@ main_image: "/images/static/06/0617.png"
 ## Ruby
 
  - [Ruby 2.6 added option to raise exception in Kernel#system](https://blog.bigbinary.com/2018/04/25/ruby-2-6-added-option-to-raise-exception-in-kernel-system.html), [Ruby on WebAssembly](http://www.blacktm.com/blog/ruby-on-webassembly) и [Deploying Ruby apps to Google Cloud Kubernetes Engine continuously with CircleCI](https://dev.to/evilmartians/deploying-ruby-apps-to-google-cloud-kubernetes-engine-continuously-with-circleci-2765)
- - [Top 10 errors from 1000+ Ruby on Rails projects (and how to avoid them)](https://rollbar.com/blog/top-10-ruby-on-rails-errors/), [How to build rock-solid Ruby on Rails apps with BDD](https://medium.freecodecamp.org/how-to-build-rock-solid-ruby-on-rails-apps-with-bdd-735de9319cc6) и [One Million Requests with Ruby and Rails](https://medium.com/@kdiogenes/one-million-requests-with-ruby-and-rails-45c11a1dd874)
+ - [Top 10 errors from 1000+ Ruby on Rails projects (and how to avoid them)](https://rollbar.com/blog/top-10-ruby-on-rails-errors/) и [How to build rock-solid Ruby on Rails apps with BDD](https://medium.freecodecamp.org/how-to-build-rock-solid-ruby-on-rails-apps-with-bdd-735de9319cc6)
  - [Enums with Rails & ActiveRecord: an improved way](https://sipsandbits.com/2018/04/30/using-database-native-enums-with-rails/) и [GDPR Rails - Rails Engine for the GDPR compliance](https://github.com/prey/gdpr_rails)
 
 ## JavaScript
