--- a/source/posts/2018/05-07-podcast-06-18.html.md
+++ b/source/posts/2018/05-07-podcast-06-18.html.md
@@ -18,6 +18,9 @@ main_image: "/images/static/06/0618.png"
 
 - [Ruby 2.5.1 Released](https://www.ruby-lang.org/en/news/2018/03/28/ruby-2-5-1-released/)
 - [New Class Naming Rules in Ruby](https://medium.com/square-corner-blog/new-class-naming-rules-in-ruby-bb3b45150c37)
+- [Collecting usage statistics with DynamoDB and AWS Lambda](https://blog.phusion.nl/2018/05/03/collecting-usage-statistics-with-dynamodb-and-aws-lambda/)
+- [Client-side caching in Rails: conditional GET requests](https://blog.appsignal.com/2018/05/01/client-side-caching-in-rails-conditional-get-requests.html)
+- [Reducing Sidekiq Memory Usage with Jemalloc](https://brandonhilkert.com/blog/reducing-sidekiq-memory-usage-with-jemalloc/)
 - [Asylo - an open and flexible framework for enclave applications](https://github.com/google/asylo)
 
 ## JavaScript
@@ -25,7 +28,7 @@ main_image: "/images/static/06/0618.png"
  - [Version 6 of Angular Now Available](https://blog.angular.io/version-6-of-angular-now-available-cc56b0efa7a4?gi=d4e0cff8e353)
  - [Defeating Electron](https://medium.com/@felixrieseberg/defeating-electron-e1464d075528)
  - [The Node.js Ecosystem Is Chaotic and Insecure](https://medium.com/@caspervonb/the-internet-is-at-the-mercy-of-a-handful-of-people-73fac4bc5068)
- - [Somebody Tried to Hide a Backdoor in a Popular JavaScript npm Package](https://www.bleepingcomputer.com/news/security/somebody-tried-to-hide-a-backdoor-in-a-popular-javascript-npm-package/)
+ - [Reported malicious module: getcookies](https://blog.npmjs.org/post/173526807575/reported-malicious-module-getcookies)
  - [Proton-native - a React environment for cross platform native desktop apps](https://proton-native.js.org/#/)
  - [Sheetfu Table Class - Google apps scripts ORM to manipulate spreadsheets as database tables](https://github.com/socialpoint-labs/sheetfu)
 
