--- a/source/posts/2018/06-11-podcast-06-23.html.md
+++ b/source/posts/2018/06-11-podcast-06-23.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "https://mp3.rwpod.com/podcasts/06/0623.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/06.23/0623.mp3"
 audio_format: "audio/mpeg"
-audio_length: 41287104
-duration: "00:42:59"
+audio_length: 27142806
+duration: "00:28:15"
 small_icon: mic
 main_image: "/images/static/06/0623.png"
 ---
@@ -17,7 +17,7 @@ main_image: "/images/static/06/0623.png"
 ## Ruby
 
  - [Rails 5.2 credentials are not secure](https://github.com/printercu/secure_credentials/wiki/Rails-5.2-credentials-are-not-secure) и [Frozen middleware with Rack freeze](https://crypt.codemancers.com/posts/2018-06-07-frozen-middleware-with-rack-freeze/)
- - [Adding Automated Speech Recognition for Phone Calls to Ruby on Rails Applications](https://www.twilio.com/blog/2018/05/automated-speech-recognition-phone-calls-ruby-on-rails.html), [The Rails presence Method](https://blog.edwardloveall.com/rails-presence-method) и [Ruby's redo, retry and next keywords](https://blog.appsignal.com/2018/06/05/redo-retry-next.html)
+ - [Adding Automated Speech Recognition for Phone Calls to Ruby on Rails Applications](https://www.twilio.com/blog/2018/05/automated-speech-recognition-phone-calls-ruby-on-rails.html), [The Rails presence Method](https://blog.edwardloveall.com/rails-presence-method), [Navigating to safe navigation](https://blog.rwell.org/2018/05/29/navigating-to-safe-navigation.html) и [Ruby's redo, retry and next keywords](https://blog.appsignal.com/2018/06/05/redo-retry-next.html)
 
 ## JavaScript
 
