--- a/source/posts/2018/06-18-podcast-06-24.html.md
+++ b/source/posts/2018/06-18-podcast-06-24.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "https://mp3.rwpod.com/podcasts/06/0624.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/06.24/0624.mp3"
 audio_format: "audio/mpeg"
-audio_length: 27142806
-duration: "00:28:15"
+audio_length: 22115130
+duration: "00:23:00"
 small_icon: mic
 main_image: "/images/static/06/0624.png"
 ---
@@ -21,7 +21,7 @@ main_image: "/images/static/06/0624.png"
 
 ## JavaScript
 
- - [5 Ways to Handle Forms on Your Static Site](https://forestry.io/blog/5-ways-to-handle-forms-on-your-static-site/), [What every developer needs to know about HTML email](https://blog.logrocket.com/what-every-developer-needs-to-know-about-html-email-df70b7c01b39) и [How JavaScript works: Storage engines + how to choose the proper storage API](hhttps://blog.sessionstack.com/how-javascript-works-storage-engines-how-to-choose-the-proper-storage-api-da50879ef576)
+ - [5 Ways to Handle Forms on Your Static Site](https://forestry.io/blog/5-ways-to-handle-forms-on-your-static-site/), [What every developer needs to know about HTML email](https://blog.logrocket.com/what-every-developer-needs-to-know-about-html-email-df70b7c01b39) и [How JavaScript works: Storage engines + how to choose the proper storage API](https://blog.sessionstack.com/how-javascript-works-storage-engines-how-to-choose-the-proper-storage-api-da50879ef576)
  - [JavaScript/WebGL library to detect and reproduce facial expressions](https://github.com/jeeliz/jeelizWeboji), [Polly.JS - a standalone, framework-agnostic JavaScript library that enables recording, replaying, and stubbing HTTP interactions](https://netflix.github.io/pollyjs/#/), [Flat color picker](https://simonwep.github.io/pickr/) и [Yett - a small webpage library to control the execution of (third party - analytics for example) scripts](https://snipsco.github.io/yett/)
 
 READMORE
