--- a/source/posts/2018/06-25-podcast-06-25.html.md
+++ b/source/posts/2018/06-25-podcast-06-25.html.md
@@ -1,5 +1,5 @@
 ---
-title: "25 выпуск 06 сезона. Ruby 2.5 and CGI.escape, Electron 3.0.0-beta.1, ESLint v5.0.0, MobX 5, Breaking Up a Monolith и прочее"
+title: "25 выпуск 06 сезона. Ruby 2.5 and CGI.escape, Electron 3.0.0-beta.1, V8 v6.8, ESLint v5.0.0, MobX 5, Breaking Up a Monolith и прочее"
 date: 2018-06-25
 tags:
  - podcasts
@@ -21,7 +21,7 @@ main_image: "/images/static/06/0625.png"
 
 ## JavaScript
 
- - [Electron 3.0.0-beta.1 released](https://electronjs.org/releases#3.0.0-beta.1), [ESLint v5.0.0 released](https://eslint.org/blog/2018/06/eslint-v5.0.0-released), [MobX 5](https://github.com/mobxjs/mobx/blob/e17c47833d1812eee6d77914be890aa41e4b7908/CHANGELOG.md#500), [Introducing A-Terrain - a cartography component for A-Frame](https://blog.mozvr.com/introducing-a-terrain/) и [We analyzed the GitHub Issues from the most popular Front-End frameworks, here’s what we found](https://building.lang.ai/we-analyzed-the-github-issues-from-the-most-popular-front-end-frameworks-heres-what-we-found-c3491b26ec95)
- - [Sunsetting React Native](https://medium.com/airbnb-engineering/sunsetting-react-native-1868ba28e30a), [A-Frame - a web framework for building virtual reality experiences](https://aframe.io/), [How to mock a dependency in a Node.js, and why you should do it](https://itnext.io/how-to-mock-dependency-in-a-node-js-and-why-2ad4386f6587), [Introducing Teleport: Over-the-air hot reloading & debugging for PWA’s](https://medium.com/@ericsimons/introducing-teleport-over-the-air-hot-reloading-debugging-for-pwas-%EF%B8%8F-efd1e2b1c64c) и [DevTube - The best developer videos in one place](https://dev.tube/)
+ - [Electron 3.0.0-beta.1 released](https://electronjs.org/releases#3.0.0-beta.1), [V8 release v6.8](https://v8project.blogspot.com/2018/06/v8-release-68.html), [ESLint v5.0.0 released](https://eslint.org/blog/2018/06/eslint-v5.0.0-released), [MobX 5](https://github.com/mobxjs/mobx/blob/e17c47833d1812eee6d77914be890aa41e4b7908/CHANGELOG.md#500), [Introducing A-Terrain - a cartography component for A-Frame](https://blog.mozvr.com/introducing-a-terrain/) и [We analyzed the GitHub Issues from the most popular Front-End frameworks, here’s what we found](https://building.lang.ai/we-analyzed-the-github-issues-from-the-most-popular-front-end-frameworks-heres-what-we-found-c3491b26ec95)
+ - [Sunsetting React Native](https://medium.com/airbnb-engineering/sunsetting-react-native-1868ba28e30a), [A-Frame - a web framework for building virtual reality experiences](https://aframe.io/), [Introducing Teleport: Over-the-air hot reloading & debugging for PWA’s](https://medium.com/@ericsimons/introducing-teleport-over-the-air-hot-reloading-debugging-for-pwas-%EF%B8%8F-efd1e2b1c64c) и [DevTube - The best developer videos in one place](https://dev.tube/)
 
 READMORE
