--- a/source/posts/2018/07-30-podcast-06-30.html.md
+++ b/source/posts/2018/07-30-podcast-06-30.html.md
@@ -20,9 +20,12 @@ main_image: "/images/static/06/0630.png"
  - [Ruby 2.6 adds Matrix#antisymmertic?](https://atulbhosale.in/posts/2018-07-23-ruby-2-6-adds-antisymmertic/)
  - [Ruby 2.6 adds Binding#source_location](https://blog.bigbinary.com/2018/07/24/ruby-2-6-adds-binding-source-location.html)
  - [Six Tips for Mastering your Procfile](https://medium.com/@adam_41691/six-tips-for-mastering-your-procfile-64ea1207b779)
+ - [Ruby on Rails: send emails with style](https://www.imaginarycloud.com/blog/rails-send-emails-with-style/)
+ - [Rails 5.2 credentials cheat cheat](https://blog.eq8.eu/til/rails-52-credentials-tricks.html)
 
 ## JavaScript
 
-
+ - [Angular v6.1 Now Available — TypeScript 2.9, Scroll Positioning, and more](https://blog.angular.io/angular-v6-1-now-available-typescript-2-9-scroll-positioning-and-more-9f1c03007bb6)
+ - [Why the New V8 is so Damn Fast](https://nodesource.com/blog/why-the-new-v8-is-so-damn-fast)
 
 READMORE
