--- a/source/posts/2018/09-10-podcast-06-36.html.md
+++ b/source/posts/2018/09-10-podcast-06-36.html.md
@@ -1,5 +1,5 @@
 ---
-title: "36 выпуск 06 сезона.  и прочее"
+title: "36 выпуск 06 сезона. Rack Explained For Ruby Developers, JavaScript idiosyncrasies, Vuidget, Hygen, PostGraphile, JSLinux и прочее"
 date: 2018-09-10
 tags:
  - podcasts
@@ -16,17 +16,19 @@ main_image: "/images/static/06/0636.png"
 
 ## Ruby
 
- - [Parallel map in Ruby - Nectarine](https://www.rockstarcoders.com/parallel-map/)
- - [Rack Explained For Ruby Developers](https://www.rubyguides.com/2018/09/rack-middleware/)
- - [Uploading files directly to S3 using Pre-signed POST request](https://blog.bigbinary.com/2018/09/04/uploading-files-directly-to-s3-using-pre-signed-post-request.html)
- - [We need to talk about changelogs](https://depfu.com/blog/we-need-to-talk-about-changelogs)
- - [Value based pagination in Ruby on Rails](https://naturaily.com/blog/value-based-pagination-rails)
- - [Finding the right level of DRY for your RSpec test suite](http://nelsonware.com/blog/2018/08/29/finding-the-right-level-of-dry-for-your-rspec-test-suite.html)
- - [Rails Presenters (video)](https://www.driftingruby.com/episodes/rails-presenters)
+ - [Rack Explained For Ruby Developers](https://www.rubyguides.com/2018/09/rack-middleware/) и [Uploading files directly to S3 using Pre-signed POST request](https://blog.bigbinary.com/2018/09/04/uploading-files-directly-to-s3-using-pre-signed-post-request.html)
+ - [Understanding Transducers in Ruby](https://medium.com/@baweaver/understanding-transducers-in-ruby-209766372c39), [Finding the right level of DRY for your RSpec test suite](http://nelsonware.com/blog/2018/08/29/finding-the-right-level-of-dry-for-your-rspec-test-suite.html) и [We need to talk about changelogs](https://depfu.com/blog/we-need-to-talk-about-changelogs)
+ - [Value based pagination in Ruby on Rails](https://naturaily.com/blog/value-based-pagination-rails), [Parallel map in Ruby - Nectarine](https://www.rockstarcoders.com/parallel-map/) и [Rails Presenters (video)](https://www.driftingruby.com/episodes/rails-presenters)
 
 ## JavaScript
 
- - [JavaScript idiosyncrasies](https://odykyi.github.io/javascript-idiosyncrasies/)
- - [Vuidget — How to create an embeddable Vue.js widget with vue-custom-element](https://itnext.io/vuidget-how-to-create-an-embeddable-vue-js-widget-with-vue-custom-element-674bdcb96b97)
+ - [GitHub Pull Requests in Visual Studio Code](https://code.visualstudio.com/blogs/2018/09/10/introducing-github-pullrequests), [Announcing styled-components v4: Better, Faster, Stronger](https://medium.com/styled-components/announcing-styled-components-v4-better-faster-stronger-3fe1aba1a112) и [Learning where you are looking at (in the browser)](https://cpury.github.io/learning-where-you-are-looking-at/)
+ - [JavaScript idiosyncrasies](https://odykyi.github.io/javascript-idiosyncrasies/) и [You don't (may not) need Moment.js](https://github.com/you-dont-need/You-Dont-Need-Momentjs)
+ - [Vuidget — How to create an embeddable Vue.js widget with vue-custom-element](https://itnext.io/vuidget-how-to-create-an-embeddable-vue-js-widget-with-vue-custom-element-674bdcb96b97), [Hygen - scalable code generator that saves you time](http://www.hygen.io/), [PostGraphile - instant GraphQL API for PostgreSQL database](https://www.graphile.org/postgraphile/) и [JSLinux - run Linux or other Operating Systems in your browser](https://bellard.org/jslinux/)
+
+## Conferences
+
+ - [Ruby Meditation #23](http://www.rubymeditation.com/)
+ - [Elixir Club 12](https://www.facebook.com/events/1931370470526709)
 
 READMORE
