--- a/source/posts/2018/08-13-podcast-06-32.html.md
+++ b/source/posts/2018/08-13-podcast-06-32.html.md
@@ -17,7 +17,7 @@ main_image: "/images/static/06/0632.png"
 ## Ruby
 
  - [Rails 5.2.1 has been released!](https://weblog.rubyonrails.org/2018/8/7/Rails-5-2-1-has-been-released/), [Ruby 2.6 Introduces Dir#each_child and Dir#children instance methods](https://blog.bigbinary.com/2018/08/07/ruby-2-6-introduces-dir-each_child-and-dir-children-instance-methods.html) и [Ruby 2.5 adds KeyError#receiver and KeyError#key](https://crypt.codemancers.com/posts/2018-08-06-ruby-2-6-adds-key-error-receiver-key/)
- - [TLS 1.3 spec released](https://tools.ietf.org/html/rfc8446), [How to Speed Up Your Ruby on Rails App](https://yalantis.com/blog/how-to-speed-up-your-ruby-on-rails-app/) и [Kimurai - a modern web scraping framework written in Ruby](https://github.com/vfreefly/kimurai)
+ - [TLS 1.3 spec released](https://tools.ietf.org/html/rfc8446), [How to Speed Up Your Ruby on Rails App](https://yalantis.com/blog/how-to-speed-up-your-ruby-on-rails-app/) и [Kimurai - a modern web scraping framework written in Ruby](https://github.com/gitter-badger/kimurai)
 
 ## JavaScript
 
