--- a/source/posts/2018/11-19-podcast-06-46.html.md
+++ b/source/posts/2018/11-19-podcast-06-46.html.md
@@ -23,6 +23,8 @@ main_image: "/images/static/06/0646.png"
 
 ## JavaScript
 
-
+ - [TensorSpace - a neural network 3D visualization framework built by TensorFlow.js, Three.js and Tween.js](https://github.com/tensorspace-team/tensorspace)
+ - [Slate - a completely customizable framework for building rich text editors](https://docs.slatejs.org/)
+ - [NearDB - simple document db made for globally distributed reads](https://github.com/leoafarias/neardb)
 
 READMORE
