--- a/source/posts/2018/11-19-podcast-06-46.html.md
+++ b/source/posts/2018/11-19-podcast-06-46.html.md
@@ -1,5 +1,5 @@
 ---
-title: "46 выпуск 06 сезона.  и прочее"
+title: "46 выпуск 06 сезона. What’s new in Ruby 2.6?, The State of JavaScript 2018, WebpackerCli, TensorSpace, Slate и прочее"
 date: 2018-11-19
 tags:
  - podcasts
@@ -16,15 +16,12 @@ main_image: "/images/static/06/0646.png"
 
 ## Ruby
 
- - [What’s new in Ruby 2.6?](https://medium.com/tailor-tech/whats-new-in-ruby-2-6-a4774f3631c1)
- - [How fast is Ruby 2.5, 2.6 and 2.6 –jit in generating Prawn PDFs](http://nts.strzibny.name/how-fast-is-ruby-2-5-2-6-and-2-6-jit-in-generating-prawn-pdfs/)
- - [Ruby memory, ActiveRecord and Draper](https://medium.com/appaloosa-store-engineering/ruby-memory-activerecord-and-draper-64f06abeeb34)
- - [WebpackerCli - bringing the power of Webpacker to any web framework](https://github.com/danielpclark/webpacker-cli)
+ - [What’s new in Ruby 2.6?](https://medium.com/tailor-tech/whats-new-in-ruby-2-6-a4774f3631c1) и [How fast is Ruby 2.5, 2.6 and 2.6 –jit in generating Prawn PDFs](http://nts.strzibny.name/how-fast-is-ruby-2-5-2-6-and-2-6-jit-in-generating-prawn-pdfs/)
+ - [Ruby memory, ActiveRecord and Draper](https://medium.com/appaloosa-store-engineering/ruby-memory-activerecord-and-draper-64f06abeeb34) и [WebpackerCli - bringing the power of Webpacker to any web framework](https://github.com/danielpclark/webpacker-cli)
 
 ## JavaScript
 
- - [TensorSpace - a neural network 3D visualization framework built by TensorFlow.js, Three.js and Tween.js](https://github.com/tensorspace-team/tensorspace)
- - [Slate - a completely customizable framework for building rich text editors](https://docs.slatejs.org/)
- - [NearDB - simple document db made for globally distributed reads](https://github.com/leoafarias/neardb)
+ - [The State of JavaScript 2018](https://2018.stateofjs.com/), [Google to pay JavaScript frameworks to implement performance-first code](https://www.zdnet.com/article/google-to-pay-javascript-frameworks-to-implement-performance-first-code/) и [The Virtual DOM is slow. Meet the Memoized DOM.](https://medium.freecodecamp.org/the-virtual-dom-is-slow-meet-the-memoized-dom-bb19f546cc52)
+ - [TensorSpace - a neural network 3D visualization framework built by TensorFlow.js, Three.js and Tween.js](https://tensorspace.org/), [Slate - a completely customizable framework for building rich text editors](https://docs.slatejs.org/) и [NearDB - simple document db made for globally distributed reads](https://github.com/leoafarias/neardb)
 
 READMORE
