--- a/source/posts/2018/12-17-podcast-06-50.html.md
+++ b/source/posts/2018/12-17-podcast-06-50.html.md
@@ -1,5 +1,5 @@
 ---
-title: "50 выпуск 06 сезона.  и прочее"
+title: "50 выпуск 06 сезона. Ruby 2.6.0-rc2, Mruby 2.0.0, Action Mailbox for Rails 6, GraphQL code generator, Matchit и прочее"
 date: 2018-12-17
 tags:
  - podcasts
@@ -16,25 +16,14 @@ main_image: "/images/static/06/0650.png"
 
 ## Ruby
 
- - [Ruby 2.6.0-rc2 Released](https://www.ruby-lang.org/en/news/2018/12/15/ruby-2-6-0-rc2-released/)
- - [Mruby 2.0.0](https://mruby.org/releases/2018/12/11/mruby-2.0.0-released.html)
- - [Introducing Action Mailbox for Rails 6](https://weblog.rubyonrails.org/2018/12/13/introducing-action-mailbox-for-rails-6/)
- - [Announcing GitLab Serverless](https://about.gitlab.com/2018/12/11/introducing-gitlab-serverless/)
- - [Inheritance and Define_method - How to Make Them Work Together](https://karolgalanciak.com/blog/2018/12/16/inheritance-and-define-method-how-to-make-them-work-together/)
- - [Serverless Slack bot on Lambda with Ruby (and what’s the less pleasant part about it)](https://medium.com/@pawelpacana/serverless-slack-bot-on-lambda-with-ruby-f43e199f8e35)
- - [How to build a serverless Twitter bot with Ruby and AWS Lambda](https://www.cookieshq.co.uk/posts/how-to-build-a-serverless-twitter-bot-with-ruby-and-aws-lambda)
- - [Building AWS Lambdas for Real World using Ruby and Serverless Framework](https://dev.to/jalerson/building-aws-lambdas-for-real-world-using-ruby-and-serverless-framework-2p49)
- - [Project Health Indicators](https://www.ruby-toolbox.com/blog/2018-12-14/project-health-indicators)
- - [Rails 5 Active Record attributes API](https://blog.bigbinary.com/2018/12/11/rails-5-attributes-api.html)
+ - [Ruby 2.6.0-rc2 Released](https://www.ruby-lang.org/en/news/2018/12/15/ruby-2-6-0-rc2-released/), [Mruby 2.0.0](https://mruby.org/releases/2018/12/11/mruby-2.0.0-released.html), [Introducing Action Mailbox for Rails 6](https://weblog.rubyonrails.org/2018/12/13/introducing-action-mailbox-for-rails-6/) и [Announcing GitLab Serverless](https://about.gitlab.com/2018/12/11/introducing-gitlab-serverless/)
+ - [Building AWS Lambdas for Real World using Ruby and Serverless Framework](https://dev.to/jalerson/building-aws-lambdas-for-real-world-using-ruby-and-serverless-framework-2p49), [Serverless Slack bot on Lambda with Ruby (and what’s the less pleasant part about it)](https://medium.com/@pawelpacana/serverless-slack-bot-on-lambda-with-ruby-f43e199f8e35) и [How to build a serverless Twitter bot with Ruby and AWS Lambda](https://www.cookieshq.co.uk/posts/how-to-build-a-serverless-twitter-bot-with-ruby-and-aws-lambda)
+ - [Rails 5 Active Record attributes API](https://blog.bigbinary.com/2018/12/11/rails-5-attributes-api.html) и [Project Health Indicators](https://www.ruby-toolbox.com/blog/2018-12-14/project-health-indicators)
 
 ## JavaScript
 
- - [A Recap of Frontend Development in 2018](https://levelup.gitconnected.com/a-recap-of-frontend-development-in-2018-715724c9441d)
- - [Our learnings from adopting GraphQL](https://medium.com/netflix-techblog/our-learnings-from-adopting-graphql-f099de39ae5f)
- - [Let's talk JS ⚡: documentation](https://areknawo.com/lets-talk-js-documentation/)
- - [A Recap of Frontend Development in 2018](https://levelup.gitconnected.com/a-recap-of-frontend-development-in-2018-715724c9441d)
- - [Performance Anti-Patterns: Base64 Encoding](https://calendar.perfplanet.com/2018/performance-anti-patterns-base64-encoding/)
- - [GraphQL code generator](https://graphql-code-generator.com/)
- - [Matchit - quickly parse & match URLs](https://github.com/lukeed/matchit)
+ - [A Recap of Frontend Development in 2018](https://levelup.gitconnected.com/a-recap-of-frontend-development-in-2018-715724c9441d) и [Our learnings from adopting GraphQL](https://medium.com/netflix-techblog/our-learnings-from-adopting-graphql-f099de39ae5f)
+ - [Let's talk JS ⚡: documentation](https://areknawo.com/lets-talk-js-documentation/) и [Performance Anti-Patterns: Base64 Encoding](https://calendar.perfplanet.com/2018/performance-anti-patterns-base64-encoding/)
+ - [GraphQL code generator](https://graphql-code-generator.com/) и [Matchit - quickly parse & match URLs](https://github.com/lukeed/matchit)
 
 READMORE
