--- a/source/posts/2019/01-07-podcast-07-01.html.md
+++ b/source/posts/2019/01-07-podcast-07-01.html.md
@@ -17,6 +17,7 @@ main_image: "/images/static/07/0701.png"
 ## Ruby
 
  - [Ruby 2.6.0 Released](https://www.ruby-lang.org/en/news/2018/12/25/ruby-2-6-0-released/)
+ - [Comprehensive Ruby 2.6 changelog](https://rubyreferences.github.io/rubychanges/)
 
 ## JavaScript
 
