--- a/source/posts/2019/01-07-podcast-07-01.html.md
+++ b/source/posts/2019/01-07-podcast-07-01.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "https://mp3.rwpod.com/podcasts/07/0701.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/07.01/0701.mp3"
 audio_format: "audio/mpeg"
-audio_length: 41495346
-duration: "00:43:12"
+audio_length: 35090558
+duration: "00:36:31"
 small_icon: mic
 main_image: "/images/static/07/0701.png"
 ---
@@ -17,7 +17,7 @@ main_image: "/images/static/07/0701.png"
 ## Ruby
 
  - [Ruby 2.6.0 Released](https://www.ruby-lang.org/en/news/2018/12/25/ruby-2-6-0-released/), [Comprehensive Ruby 2.6 changelog](https://rubyreferences.github.io/rubychanges/), [An update on the Bundler 2 release](https://bundler.io/blog/2019/01/04/an-update-on-the-bundler-2-release.html) и [Active Admin Tips and Performance Optimizations for Rails Apps](https://pawelurbanek.com/active-admin-tips-optimizations)
- - [TensorStream: Bringing Machine Learning to Ruby](https://medium.com/@joseph.dayo/tensorstream-bringing-machine-learning-to-ruby-114582060e3d), [Parallelising ETL workflows with the Jongleur gem](http://bootstrap.me.uk/gems/2019/01/06/jongleur-etl.html) и [Programming Crypto Collectibles Step-by-Step Book / Guide](https://github.com/cryptocopycats/programming-cryptocollectibles)
+ - [TensorStream: Bringing Machine Learning to Ruby](https://medium.com/@joseph.dayo/tensorstream-bringing-machine-learning-to-ruby-114582060e3d), [Parallelising ETL workflows with the Jongleur gem](http://bootstrap.me.uk/gems/2019/01/06/jongleur-etl.html) и [Programming Crypto Collectibles Step-by-Step Book / Guide](https://github.com/cryptocopycats/programming-cryptocollectibles) ([Видео про CryptoKitties](https://www.youtube.com/watch?v=jGfvkjzLrNw))
 
 ## JavaScript
 
