--- a/source/posts/2019/01-14-podcast-07-02.html.md
+++ b/source/posts/2019/01-14-podcast-07-02.html.md
@@ -16,11 +16,18 @@ main_image: "/images/static/07/0702.png"
 
 ## Ruby
 
-
+ - [Exploring a critical Net::Protocol issue in Ruby 2.6.0p0 and how it can lead to a security problem](https://mensfeld.pl/2019/01/exploring-a-critical-netprotocol-issue-in-ruby-2-6-0p0-and-how-it-can-lead-to-a-security-problem/)
+ - [Common mistakes that cause Ruby on Rails apps outages](https://frontdeveloper.pl/2019/01/common-mistakes-that-cause-ruby-on-rails-apps-outages/)
+ - [3 ActiveRecord Mistakes That Slow Down Rails Apps: Count, Where and Present](https://www.speedshop.co/2019/01/10/three-activerecord-mistakes.html)
+ - [Extracting Text From Images Using Ruby](https://aonemd.github.io/blog/extracting-text-from-images-using-ruby)
+ - [25+ Recommended Blogs & Books for Developers](https://hackernoon.com/recommended-books-blogs-for-software-engineers-8a4351abe804)
+ - [Using Action Text in a Rails 5.2 Application](https://www.driftingruby.com/episodes/using-action-text-in-a-rails-5-2-application)
+ - [Rubyoshka - Composable HTML templating for Ruby](https://github.com/digital-fabric/rubyoshka)
 
 ## Web
 
- - [New year, new GitHub: Announcing unlimited free private repos and unified Enterprise offering](https://blog.github.com/2019-01-07-new-year-new-github/), [Amazon DocumentDB (with MongoDB compatibility)](https://aws.amazon.com/documentdb/), [Google Chrome's built-in ad blocker to roll out worldwide on July 9](https://www.zdnet.com/article/google-chromes-built-in-ad-blocker-to-roll-out-worldwide-on-july-9/)
+ - [New year, new GitHub: Announcing unlimited free private repos and unified Enterprise offering](https://blog.github.com/2019-01-07-new-year-new-github/), [Amazon DocumentDB (with MongoDB compatibility)](https://aws.amazon.com/documentdb/), [Google Chrome's built-in ad blocker to roll out worldwide on July 9](https://www.zdnet.com/article/google-chromes-built-in-ad-blocker-to-roll-out-worldwide-on-july-9/), [npm, Inc. has a new CEO, Bryan Bogensberger](https://blog.npmjs.org/post/181872197694/npm-inc-has-a-new-ceo-bryan-bogensberger)
+ - [Anime.js v3.0.0](https://animejs.com/)
 
 
 READMORE
