--- a/source/posts/2019/01-14-podcast-07-02.html.md
+++ b/source/posts/2019/01-14-podcast-07-02.html.md
@@ -26,8 +26,9 @@ main_image: "/images/static/07/0702.png"
 
 ## Web
 
- - [New year, new GitHub: Announcing unlimited free private repos and unified Enterprise offering](https://blog.github.com/2019-01-07-new-year-new-github/), [Amazon DocumentDB (with MongoDB compatibility)](https://aws.amazon.com/documentdb/), [Google Chrome's built-in ad blocker to roll out worldwide on July 9](https://www.zdnet.com/article/google-chromes-built-in-ad-blocker-to-roll-out-worldwide-on-july-9/), [npm, Inc. has a new CEO, Bryan Bogensberger](https://blog.npmjs.org/post/181872197694/npm-inc-has-a-new-ceo-bryan-bogensberger)
+ - [New year, new GitHub: Announcing unlimited free private repos and unified Enterprise offering](https://blog.github.com/2019-01-07-new-year-new-github/), [Amazon DocumentDB (with MongoDB compatibility)](https://aws.amazon.com/documentdb/), [Google Chrome's built-in ad blocker to roll out worldwide on July 9](https://www.zdnet.com/article/google-chromes-built-in-ad-blocker-to-roll-out-worldwide-on-july-9/)
  - [Anime.js v3.0.0](https://animejs.com/)
+ - [Your WebGL aiders](https://areknawo.com/your-webgl-aiders/)
 
 
 READMORE
