--- a/source/posts/2019/01-14-podcast-07-02.html.md
+++ b/source/posts/2019/01-14-podcast-07-02.html.md
@@ -1,5 +1,5 @@
 ---
-title: "02 выпуск 07 сезона.  и прочее"
+title: "02 выпуск 07 сезона. Exploring a critical Net::Protocol issue in Ruby 2.6.0p0, Rubyoshka, Anime.js, React Kawaii и прочее"
 date: 2019-01-14
 tags:
  - podcasts
@@ -16,19 +16,13 @@ main_image: "/images/static/07/0702.png"
 
 ## Ruby
 
- - [Exploring a critical Net::Protocol issue in Ruby 2.6.0p0 and how it can lead to a security problem](https://mensfeld.pl/2019/01/exploring-a-critical-netprotocol-issue-in-ruby-2-6-0p0-and-how-it-can-lead-to-a-security-problem/)
- - [Common mistakes that cause Ruby on Rails apps outages](https://frontdeveloper.pl/2019/01/common-mistakes-that-cause-ruby-on-rails-apps-outages/)
- - [3 ActiveRecord Mistakes That Slow Down Rails Apps: Count, Where and Present](https://www.speedshop.co/2019/01/10/three-activerecord-mistakes.html)
- - [Extracting Text From Images Using Ruby](https://aonemd.github.io/blog/extracting-text-from-images-using-ruby)
- - [25+ Recommended Blogs & Books for Developers](https://hackernoon.com/recommended-books-blogs-for-software-engineers-8a4351abe804)
- - [Using Action Text in a Rails 5.2 Application](https://www.driftingruby.com/episodes/using-action-text-in-a-rails-5-2-application)
- - [Rubyoshka - Composable HTML templating for Ruby](https://github.com/digital-fabric/rubyoshka)
+ - [Exploring a critical Net::Protocol issue in Ruby 2.6.0p0 and how it can lead to a security problem](https://mensfeld.pl/2019/01/exploring-a-critical-netprotocol-issue-in-ruby-2-6-0p0-and-how-it-can-lead-to-a-security-problem/), [Common mistakes that cause Ruby on Rails apps outages](https://frontdeveloper.pl/2019/01/common-mistakes-that-cause-ruby-on-rails-apps-outages/) и [3 ActiveRecord Mistakes That Slow Down Rails Apps: Count, Where and Present](https://www.speedshop.co/2019/01/10/three-activerecord-mistakes.html)
+ - [Using Action Text in a Rails 5.2 Application](https://www.driftingruby.com/episodes/using-action-text-in-a-rails-5-2-application), [Extracting Text From Images Using Ruby](https://aonemd.github.io/blog/extracting-text-from-images-using-ruby), [Rubyoshka - Composable HTML templating for Ruby](https://github.com/digital-fabric/rubyoshka) и [25+ Recommended Blogs & Books for Developers](https://hackernoon.com/recommended-books-blogs-for-software-engineers-8a4351abe804)
 
 ## Web
 
- - [New year, new GitHub: Announcing unlimited free private repos and unified Enterprise offering](https://blog.github.com/2019-01-07-new-year-new-github/), [Amazon DocumentDB (with MongoDB compatibility)](https://aws.amazon.com/documentdb/), [Google Chrome's built-in ad blocker to roll out worldwide on July 9](https://www.zdnet.com/article/google-chromes-built-in-ad-blocker-to-roll-out-worldwide-on-july-9/)
- - [Anime.js v3.0.0](https://animejs.com/)
- - [Your WebGL aiders](https://areknawo.com/your-webgl-aiders/)
+ - [New year, new GitHub: Announcing unlimited free private repos and unified Enterprise offering](https://blog.github.com/2019-01-07-new-year-new-github/), [Amazon DocumentDB (with MongoDB compatibility)](https://aws.amazon.com/documentdb/), [Google Chrome's built-in ad blocker to roll out worldwide on July 9](https://www.zdnet.com/article/google-chromes-built-in-ad-blocker-to-roll-out-worldwide-on-july-9/) и [Defensive JavaScript](https://www.javascriptjanuary.com/blog/defensive-javascript)
+ - [Anime.js v3.0.0](https://animejs.com/), [Your WebGL aiders](https://areknawo.com/your-webgl-aiders/), [30 Days of Vue](https://www.fullstack.io/30-days-of-vue/) и [React Kawaii - Cute React SVG Components](https://react-kawaii.now.sh/)
 
 
 READMORE
