--- a/source/posts/2019/01-14-podcast-07-02.html.md
+++ b/source/posts/2019/01-14-podcast-07-02.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "https://mp3.rwpod.com/podcasts/07/0702.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/07.02/0702.mp3"
 audio_format: "audio/mpeg"
-audio_length: 35090558
-duration: "00:36:31"
+audio_length: 37740042
+duration: "00:39:17"
 small_icon: mic
 main_image: "/images/static/07/0702.png"
 ---
@@ -17,7 +17,7 @@ main_image: "/images/static/07/0702.png"
 ## Ruby
 
  - [Exploring a critical Net::Protocol issue in Ruby 2.6.0p0 and how it can lead to a security problem](https://mensfeld.pl/2019/01/exploring-a-critical-netprotocol-issue-in-ruby-2-6-0p0-and-how-it-can-lead-to-a-security-problem/), [Common mistakes that cause Ruby on Rails apps outages](https://frontdeveloper.pl/2019/01/common-mistakes-that-cause-ruby-on-rails-apps-outages/) и [3 ActiveRecord Mistakes That Slow Down Rails Apps: Count, Where and Present](https://www.speedshop.co/2019/01/10/three-activerecord-mistakes.html)
- - [Using Action Text in a Rails 5.2 Application](https://www.driftingruby.com/episodes/using-action-text-in-a-rails-5-2-application), [Extracting Text From Images Using Ruby](https://aonemd.github.io/blog/extracting-text-from-images-using-ruby), [Rubyoshka - Composable HTML templating for Ruby](https://github.com/digital-fabric/rubyoshka) и [25+ Recommended Blogs & Books for Developers](https://hackernoon.com/recommended-books-blogs-for-software-engineers-8a4351abe804)
+ - [Extracting Text From Images Using Ruby](https://aonemd.github.io/blog/extracting-text-from-images-using-ruby), [Using Action Text in a Rails 5.2 Application](https://www.driftingruby.com/episodes/using-action-text-in-a-rails-5-2-application), [Rubyoshka - Composable HTML templating for Ruby](https://github.com/digital-fabric/rubyoshka) и [25+ Recommended Blogs & Books for Developers](https://hackernoon.com/recommended-books-blogs-for-software-engineers-8a4351abe804)
 
 ## Web
 
