--- a/source/posts/2019/02-18-podcast-07-07.html.md
+++ b/source/posts/2019/02-18-podcast-07-07.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "https://mp3.rwpod.com/podcasts/07/0707.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/07.07/0707.mp3"
 audio_format: "audio/mpeg"
-audio_length: 34858896
-duration: "00:36:17"
+audio_length: 31150200
+duration: "00:32:25"
 small_icon: mic
 main_image: "/images/static/07/0707.png"
 ---
@@ -17,7 +17,7 @@ main_image: "/images/static/07/0707.png"
 ## Ruby
 
  - [Rails 6 unnoticed features](https://drivy.engineering/rails-6-unnoticed-features/), [Ruby on Rails API Authentication](https://blog.codemy.net/ruby-on-rails-api-authentication/) и [Three Useful Data Migration Patterns for Rails](https://www.ombulabs.com/blog/rails/data-migrations/three-useful-data-migrations-patterns-in-rails.html)
- - [CGI: Ruby's Bare Metal](https://www.mikeperham.com/2015/01/05/cgi-rubys-bare-metal/), [Carve your controllers like Papa Carlo](https://dev.to/evilmartians/carve-your-controllers-like-papa-carlo-32m6) и [Debugging Sidekiq Workers Using pry-remote on Rails Applications](https://devtechnica.com/ruby-language/debugging-sidekiq-workers-using-pry-remote-on-rails-applications)
+ - [Carve your controllers like Papa Carlo](https://dev.to/evilmartians/carve-your-controllers-like-papa-carlo-32m6) и [Debugging Sidekiq Workers Using pry-remote on Rails Applications](https://devtechnica.com/ruby-language/debugging-sidekiq-workers-using-pry-remote-on-rails-applications)
 
 ## Web
 
