--- a/source/posts/2019/03-12-cafe-009.html.md
+++ b/source/posts/2019/03-12-cafe-009.html.md
@@ -1,7 +1,7 @@
 ---
 published: false
 title: "RWPod Кафе 9: Katrina Owen"
-date: 2019-03-06
+date: 2019-03-12
 tags:
  - podcasts
  - cafe
@@ -33,5 +33,6 @@ main_image: "/images/static/cafe/009.jpg"
  - [Twitter](https://twitter.com/kytrinyx)
  - [99 Bottles of OOP](https://www.sandimetz.com/99bottles)
  - [Exercism](https://exercism.io/)
+ - [RubyC 2019](https://rubyc.eu/)
 
 READMORE
