--- a/source/posts/2019/03-12-cafe-009.html.md
+++ b/source/posts/2019/03-12-cafe-009.html.md
@@ -35,4 +35,6 @@ main_image: "/images/static/cafe/009.jpg"
  - [Exercism](https://exercism.io/)
  - [RubyC 2019](https://rubyc.eu/)
 
+ - [Текстовая версия](https://docs.google.com/document/d/1d3BqCrWmaEa9VvJhzr7kEcJ3UPGQQmhkv-Lsm8_PvNU/edit#heading=h.5141z5qqzwg6)
+
 READMORE
