--- a/source/posts/2019/03-12-cafe-009.html.md
+++ b/source/posts/2019/03-12-cafe-009.html.md
@@ -1,5 +1,4 @@
 ---
-published: false
 title: "RWPod Кафе 9: Katrina Owen"
 date: 2019-03-12
 tags:
@@ -14,8 +13,7 @@ small_icon: mic
 main_image: "/images/static/cafe/009.jpg"
 ---
 
-Добрый день уважаемые слушатели. В гостях RWpod Cafe сегодня Oleg Antonyan:
-
+Добрый день уважаемые слушатели. В гостях RWpod Cafe сегодня Katrina Owen:
 
  - Could you briefly introduce yourself?
  - What will your talk be about, exactly? Why this topic?
