--- a/source/posts/2019/03-12-cafe-009.html.md
+++ b/source/posts/2019/03-12-cafe-009.html.md
@@ -15,7 +15,7 @@ main_image: "/images/static/cafe/009.jpg"
 
 Добрый день уважаемые слушатели. В гостях RWpod Cafe сегодня Katrina Owen:
 
- - [Текстовая версия](https://docs.google.com/document/d/1d3BqCrWmaEa9VvJhzr7kEcJ3UPGQQmhkv-Lsm8_PvNU/edit#heading=h.5141z5qqzwg6)
+ - [Текстовая версия](https://rubyc.eu/posts/97)
 
  - Could you briefly introduce yourself?
  - What will your talk be about, exactly? Why this topic?
